objects/Fsl_Certificate_Details__c.object
<CustomObject>
    <fields>
        <fullName>Begin_Hours__c</fullName>
        <label>Begin Hours</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Mi_Km_Hr__c</fullName>
        <formula>IF( ISBLANK(Begin_Mi_Km__c ) , &apos;&apos;, &apos;Miles/Kilometers: &apos; +  Begin_Mi_Km__c ) + BR() + 
&apos;Hours: &apos; + Begin_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Mi/Km/Hr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Mi_Km__c</fullName>
        <label>Begin Mi/Km</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <label>Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageType__c</fullName>
        <label>Coverage Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>*Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hours__c</fullName>
        <label>End Hours</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Mi_Km_Hr__c</fullName>
        <formula>IF( ISBLANK(End_Mi_Km__c) , &apos;&apos;, &apos;Miles/Kilometers: &apos; +End_Mi_Km__c) + BR() +
&apos;Hours: &apos; + End_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Mi/Km/Hr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Mi_Km__c</fullName>
        <label>End Mi/Km</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_Formula__c</fullName>
        <formula>DATE(VALUE(RIGHT(Expiry_Date__c, 4)), VALUE(LEFT(Expiry_Date__c, FIND(&quot;/&quot;, Expiry_Date__c) - 1)), VALUE(MID(Expiry_Date__c, FIND(&quot;/&quot;, Expiry_Date__c) + 1, FIND(&quot;/&quot;, Expiry_Date__c, FIND(&quot;/&quot;, Expiry_Date__c) + 1) - FIND(&quot;/&quot;, Expiry_Date__c) - 1)))</formula>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Number__c</fullName>
        <label>Procedure Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>Certificate_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Formula__c</fullName>
        <formula>DATE(VALUE(RIGHT(Start_Date__c, 4)), VALUE(LEFT(Start_Date__c, FIND(&quot;/&quot;, Start_Date__c) - 1)), VALUE(MID(Start_Date__c, FIND(&quot;/&quot;, Start_Date__c) + 1, FIND(&quot;/&quot;, Start_Date__c, FIND(&quot;/&quot;, Start_Date__c) + 1) - FIND(&quot;/&quot;, Start_Date__c) - 1)))</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Colour__c</fullName>
        <formula>IF( ($Profile.Name = &apos;EVL_Dealer_Advanced&apos; || $Profile.Name = &apos;EVL_Dealer_Technician&apos;),if( TEXT($User.LanguageLocaleKey) &lt;&gt;&apos;fr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/ACTIVEPNG.png&quot;, &apos;FA&apos;, 12,50),
IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/EXPIREDPNG.png&quot;, &quot;red&quot;, 12 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/NOTYETPNG.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;)
)
),if( TEXT( $User.LanguageLocaleKey ) ==&apos;fr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/ACTIVEPNG_fr.png&quot;, &apos;FA&apos;, 12,50),
IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/EXPIREDPNG_fr.png&quot;, &quot;red&quot;, 18 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/NOTYETACTIVEPNG_fr.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;)
)
), &quot;&quot;)
),if( TEXT($User.LanguageLocaleKey)==&apos;en_US&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVEPNG.png&quot;, &apos;FA&apos;, 12,50),
IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIREDPNG.png&quot;, &quot;red&quot;, 12 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETPNG.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;fr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVEPNG_fr.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIREDPNG_fr.png&quot;, &quot;red&quot;, 18 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVEPNG_fr.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;es&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_es.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_es.png&quot;, &quot;red&quot;, 16 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVE_es.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;tr&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_tr.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_tr.png&quot;, &quot;red&quot;, 22 ,65),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVE_tr.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),
if( TEXT( $User.LanguageLocaleKey ) ==&apos;de&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_de.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_de.png&quot;, &quot;red&quot;, 14 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETACTIVE_de.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),

if( TEXT( $User.LanguageLocaleKey ) ==&apos;ko&apos;,
IF(Status__c == &apos;Active&apos;,IMAGE(&quot;/resource/FSL_Images/FSL_Images/ACTIVE_ko.png&quot;, &apos;FA&apos;, 12,50),IF(Status__c == &apos;Expired&apos; , IMAGE(&quot;/resource/FSL_Images/FSL_Images/EXPIRED_ko.png&quot;, &quot;red&quot;, 12 ,60),
IF(Status__c == &apos;Not Yet Active&apos;, IMAGE(&quot;/resource/FSL_Images/FSL_Images/NOTYETPNG_ko.png&quot;, &quot;red&quot;, 20 ,60),&quot;&quot;))),&quot;&quot;)))))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Admin_Manual_URL__c</fullName>
        <formula>IF(ISBLANK(Warranty_Administration_Manual__c), &apos;Not Available&apos;, HYPERLINK( Warranty_Administration_Manual__c +  Procedure_Number__c , &quot;Click Here&quot;, &quot;_blank&quot; ))</formula>
        <label>Warranty Administration Manual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Administration_Manual__c</fullName>
        <label>Warranty Administration Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Certificate Details</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Certifica Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>